# CAPA-Benchmark

./: README.md
benchmark/: CMakeLists.txt  Makefile
benchmark/include/: benchInfo.h
benchmark/include/benchmarks/: map.h  reduction.h
benchmark/src/: .ycm_extra_conf.py  CMakeLists.txt  CMakeLists.txt.bak  Makefile  bench  bench.cpp  bench.h  benchFixture.h  benchmark  benchmark.cpp  benchmarkKernels.cu  benchmarkKernels.cuh  benchmarkObj.cu  benchmarkObj.h  benchmarkTypedefs.h  device.cu  functors.h  host.cpp  host.cu  matrixBenchmarks.h  miscFunctions.cpp  miscFunctions.h  miscFunctions.hpp  reductionBenchmarks.h  results.txt
benchmark/src/include/: bench.h
benchmark/src/include/benchmarks/: map.h  matrix.h  reduction.h  scan.h
benchmark/src/include/hayai/: test.cuh
benchmark/src/include/misc/: fixture.h  functors.h  typedefs.h
project-extra/: CudaTypeclass.cu
