cmake_minimum_required(VERSION 3.2)
project(cpp11)
find_package(CUDA)
set(CCBIN clang++)
list(APPEND CUDA_NVCC_FLAGS "-std=c++11;-O0;-DVERBOSE")
#SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
set (CMAKE_C_COMPILER ${CMAKE_CXX_COMPILER})
include_directories (include)
file(GLOB SRC "./src/*.cu" "./src/*.cpp")

CUDA_ADD_EXECUTABLE(cpp11 ${SRC})
